# jarspect

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LOGGING_AUDIT.md  LOGO.md  PLAN.md  README.md  TEST.md
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-bytecode-evidence-core/: 01-RESEARCH.md  01-bytecode-evidence-core-01-PLAN.md  01-bytecode-evidence-core-01-SUMMARY.md  01-bytecode-evidence-core-02-PLAN.md  01-bytecode-evidence-core-02-SUMMARY.md  01-bytecode-evidence-core-03-PLAN.md  01-bytecode-evidence-core-03-SUMMARY.md  01-bytecode-evidence-core-VERIFICATION.md
.planning/phases/01-foundation/: 01-02-SUMMARY.md
.planning/phases/02-archive-yara-fidelity/: 02-RESEARCH.md  02-archive-yara-fidelity-01-PLAN.md  02-archive-yara-fidelity-01-SUMMARY.md  02-archive-yara-fidelity-02-PLAN.md  (+4 more)
data/signatures/: rules.yar  signatures.json
demo/: build_sample.sh  recording-checklist.md  voiceover.md
docs/: architecture.mmd  benchmarking.md  corpus-calibration.md  false-positives.md  logging-audit.md
scripts/: aggregate-run.ts  demo_run.sh  fetch-malwarebazaar-minecraft.sh  malwarebazaar-download.sh  modrinth-top-50-scan.sh  render-benchmark-figures.ts  scan-local-dir.sh  select-malwarebazaar-dataset.ts  signatures_index.py
src/: behavior.rs  lib.rs  main.rs  malwarebazaar.rs  profile.rs  scan.rs  scoring.rs  verdict.rs
src/analysis/: archive.rs  byte_array_strings.rs  classfile_evidence.rs  evidence.rs  metadata.rs  mod.rs  yara.rs
src/detectors/: capability_base64_stager.rs  capability_cred_theft.rs  capability_deser.rs  capability_discord_webhook.rs  capability_dynamic_load.rs  capability_exec.rs  capability_fs_modify.rs  capability_native.rs  capability_network.rs  capability_persistence.rs  capability_remote_code_load.rs  index.rs  mod.rs  spec.rs
tests/: regression-fixtures.rs  test_behavior_agent_parsing.py  test_behavior_contract.py  test_intake.py  test_llm_json_extract.py  test_patterns.py  test_reputation.py  test_scan_behavior.py  test_scan_full.py  test_scan_static.py  test_signatures.py  test_upload.py  test_verdict.py
tests/fixtures/: README.md
tools/: build-regression-fixtures.sh
web/: app.js  index.html  styles.css
(+56 files in other folders)
