[package]
name = "jarspect"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["multipart"] }
cafebabe = "0.9.0"
cesu8 = "1.1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "fs"] }
toml = "1"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.16", features = ["v4", "serde"] }
yara-x = "1.7"
zip = "2.4"

[dev-dependencies]
tempfile = "3.26.0"
